# jpad

./: .gitignore  BUILD.md  LICENSE  README.md  build.ps1  build.sh  create-macos-tray-icon.sh  create-tray-icon.sh  dev.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Editor.tsx  NeonIcon.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx
src/hooks/: useVimMode.ts
src/store/: useSettingsStore.ts  useStore.ts  useThemeStore.ts
